--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,8 @@ $background_light:#ffffff;
 $background_dark:#F8F8F8;
 $background_toast: #EAEAEA;
 $background_primary: #0ad4fa;
+
+$background_primary_transparent: rgba(10,212,250,0.8);
 $background_secondary: #D72785;
 $background_body:#ECEEF3;
 $color_main:#616161;
@@ -48,6 +50,17 @@ body{
   }
   button{
     cursor: pointer;
+    border-radius:100px;
+    border: none;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: 15px;
+    line-height:48px;
+    font-size: $size_h3;
+    font-weight: 300;
+    &:focus{
+      outline:0;
+    }
   }
   .app{
     margin: 16px 0;
@@ -132,16 +145,7 @@ body{
             border-left: 1px solid $color_toast;
             padding-left: 18px;
             font-size: $size_h3;
-            button.inactive, button.active{
-              border-radius:100px;
-              border: none;
-              padding-left: 15px;
-              padding-right: 15px;
-              margin-left: 15px;
-              line-height:48px;
-              font-size: $size_h3;
-              font-weight: 300;
-            }
+            
             button.inactive{
               background-color: $background_toast;
               color: $color_toast;
@@ -168,6 +172,100 @@ body{
               border-radius: 100px;
               border: none;
               float:left;
+              padding: 0px;
+              line-height: 0px;
+            }
+          }
+        }
+
+        #products-container{
+          display:grid;
+          grid-gap: 15px;
+          padding: 15px;
+          grid-template-columns: repeat(auto-fill,minmax(276px, 1fr));
+
+          .product-cell{
+            list-style-type: none;
+            margin-bottom:276px;
+
+            .inner-modal-menu{
+              height: 100%;
+              width: 276px;
+              height: 276px;
+              background-color: $background_primary_transparent;
+             
+              position: absolute;
+              z-index: 2;
+
+              .buy-container{
+
+                button.buy-floater{
+                  width: 47px;
+                  height: 47px;
+                  float: right;
+                  padding: 0px;
+                  line-height: 0px;
+                  background-color: rgba(0,0,0,0);
+                }
+              }
+
+              .preview-price{
+                top:0%;
+                clear: both;
+                padding-top:40%;
+                text-align: center;
+                display: flex;
+                justify-content: center;
+                h2{
+                  color: $color_primary;
+                }
+                img{
+                  margin-top: 10px;
+                }
+              }
+              .redeem-button{
+                display: flex;
+                justify-content: center;
+                button{
+                  margin-left:0px;
+                }
+              }
+            }
+           
+
+            .product-card{
+              width: 276px;
+              height: 276px;
+              background-color: $background_light;
+              box-shadow:2px 2px 4px 0 rgba(0,0,0,0.10);
+              position: absolute;
+              z-index: 1;
+              .buy-container{
+                button.buy-floater{
+                  width: 47px;
+                  height: 47px;
+                  float: right;
+                  padding: 0px;
+                  line-height: 0px;
+                  background-color: rgba(0,0,0,0);
+                }
+              }
+
+              .img-container{
+                position: absolute;
+                top:0px;
+                float: left;
+                z-index: -1;
+              }
+              
+              .data-container{
+                border-top: 1px solid $color_toast;
+                position: absolute;
+                width:80%;
+                left:10%;
+                bottom:2%;
+                z-index: 0;
+              }
             }
           }
         }
