--- a/src/App.scss
+++ b/src/App.scss
@@ -200,6 +200,7 @@ body{
               background-color: $background_primary_transparent;
               position: absolute;
               z-index: 2;
+              
               .buy-container{
                 button.buy-floater{
                   width: 47px;
@@ -258,8 +259,10 @@ body{
               }
 
               .img-container{
+                width: 80%;
                 position: absolute;
-                top:0px;
+                top:2%;
+                left:5%;
                 float: left;
                 z-index: -1;
               }
@@ -322,5 +325,23 @@ body{
     }
   }
 
-    
+  .shaker:hover{
+    animation: shake 0.2s;  
+  }
+  
+  @keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
+
+  
 }
